--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -29,10 +29,13 @@
   lightdotso-bundler = { workspace = true }
   lightdotso-consumer = { workspace = true }
   lightdotso-db = { workspace = true }
+  lightdotso-gas = { workspace = true }
   lightdotso-indexer = { workspace = true }
   lightdotso-kafka = { workspace = true }
+  lightdotso-paymaster = { workspace = true }
   lightdotso-prisma = { workspace = true }
   lightdotso-rpc = { workspace = true }
+  lightdotso-simulator = { workspace = true }
   lightdotso-tracing = { workspace = true }
   ratatui = { version = "0.22.0", features = ["all-widgets"] }
   redb = { workspace = true }
