chore: Update otel_config.yml
Signed-off-by: Shun Kakinoki <39187513+shunkakinoki@users.noreply.github.com>

--- a/fly/otel-collector/otel_config.yml
+++ b/fly/otel-collector/otel_config.yml
@@ -20,6 +20,8 @@ receivers:
         endpoint: 0.0.0.0:4317 # here we tell OpenTelemetryCollector to listen for metrics submissions from our main app
 
 exporters:
+  logging:
+    loglevel: debug
   prometheusremotewrite:
     endpoint: https://light.fmp.fiberplane.dev/api/v1/write # This is the endpoint we point it to send to FMP
 
@@ -27,4 +29,8 @@ service: # we define the pipeline the collector needs to go through
   pipelines:
     metrics:
       receivers: [otlp]
-      exporters: [prometheusremotewrite]
+      exporters: [logging, prometheusremotewrite]
+
+  telemetry:
+    logs:
+      level: "debug"
