feat: ini user operation rpc

--- a/crates/paymaster/Cargo.toml
+++ b/crates/paymaster/Cargo.toml
@@ -9,6 +9,7 @@
   repository.workspace = true
 
 [dependencies]
+  async-trait = { workspace = true }
   clap = { workspace = true }
   ethers-main = { workspace = true }
   eyre = { workspace = true }
