--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -13,6 +13,8 @@
   axum = { workspace = true }
   governor = "0.5.1"
   http = { workspace = true }
+  hyper = { workspace = true }
+  lightdotso-tracing = { workspace = true }
   serde = { workspace = true, features = ["derive"] }
   tower = { workspace = true, features = [
     "full",
