chore: ini simulator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
   "tailwindCSS.experimental.configFile": "configurations/tailwindcss/src/index.js",
   // Typescript settings
   "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "rust-analyzer.linkedProjects": ["./crates/simulator/Cargo.toml"]
 }
