feat: ini simulator

--- a/crates/simulator/Cargo.toml
+++ b/crates/simulator/Cargo.toml
@@ -19,5 +19,6 @@
   lightdotso-tracing = { workspace = true }
   revm = { workspace = true }
   serde = { workspace = true }
+  serde_json = { workspace = true }
   silius-rpc = { workspace = true }
   tokio = { workspace = true }
