feat: ini api docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,21 @@
-.gitignore
+.autometrics
+.build
+.next
+.git
+.gradle
+.turbo
+broadcast
+build
+cache
+cache_hardhat
+coverage
+dist
+fastlane
+lib
+node_modules
+optimized-out
+out
+out-wagmi
+target
+typechain-types
+.env
