--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -42,6 +42,9 @@ jobs:
         run: flyctl deploy --config apps/api/fly.toml --dockerfile apps/api/Dockerfile
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          INNGEST_SIGNING_KEY: ${{ secrets.INNGEST_SIGNING_KEY }}
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   fly-deploy-bundler:
     runs-on: ubuntu-latest
     needs:
