--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -18,12 +18,12 @@
 
 FROM node:18-slim AS base
 
-ARG INNGEST_SIGNING_KEY
+ARG INNGEST_EVENT_KEY
 ARG TARGETARCH
 ARG TURBO_TEAM
 ARG TURBO_TOKEN
 
-ENV INNGEST_SIGNING_KEY=${INNGEST_SIGNING_KEY}
+ENV INNGEST_EVENT_KEY=${INNGEST_EVENT_KEY}
 ENV TURBO_TEAM=${TURBO_TEAM}
 ENV TURBO_TOKEN=${TURBO_TOKEN}
 
