--- a/apps/app/turbo.json
+++ b/apps/app/turbo.json
@@ -13,7 +13,7 @@
         "NEXT_PUBLIC_VERCEL_URL",
         "NEXT_RUNTIME"
       ],
-      "inputs": ["app/**", "pages/**", "src/**"],
+      "inputs": ["app/**", "pages/**", "src/**", "next.config.js"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "clean": {
