--- a/apps/changelog/turbo.json
+++ b/apps/changelog/turbo.json
@@ -4,7 +4,7 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "inputs": ["app/**", "pages/**", "src/**"],
+      "inputs": ["app/**", "pages/**", "src/**", "next.config.js"],
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "clean": {
