--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.2.0",
     "@types/node": "^20.4.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
