perf: ini next env

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -18,14 +18,26 @@
 
 FROM node:18-slim AS base
 
-ARG INNGEST_EVENT_KEY
 ARG TARGETARCH
 ARG TURBO_TEAM
 ARG TURBO_TOKEN
 
-ENV INNGEST_EVENT_KEY=${INNGEST_EVENT_KEY}
+ARG DATABASE_URL
+ARG INNGEST_EVENT_KEY
+ARG NEXTAUTH_URL
+ARG NEXTAUTH_SECRET
+ARG UPSTASH_REDIS_REST_URL
+ARG UPSTASH_REDIS_REST_TOKEN
+
 ENV TURBO_TEAM=${TURBO_TEAM}
 ENV TURBO_TOKEN=${TURBO_TOKEN}
+
+ARG DATABASE_URL=${DATABASE_URL}
+ENV INNGEST_EVENT_KEY=${INNGEST_EVENT_KEY}
+ARG NEXTAUTH_URL=${NEXTAUTH_URL}
+ARG NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+ARG UPSTASH_REDIS_REST_URL=${UPSTASH_REDIS_REST_URL}
+ARG UPSTASH_REDIS_REST_TOKEN=${UPSTASH_REDIS_REST_TOKEN}
 
 # Fixes issues with Sentry CLI and SSL certificates during build
 RUN apt-get update -qq && \
