--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -18,11 +18,13 @@
 
 FROM node:18-slim AS base
 
+ARG DOPPLER_TOKEN
 ARG INNGEST_EVENT_KEY
 ARG TARGETARCH
 ARG TURBO_TEAM
 ARG TURBO_TOKEN
 
+ENV DOPPLER_TOKEN=${DOPPLER_TOKEN}
 ENV INNGEST_EVENT_KEY=${INNGEST_EVENT_KEY}
 ENV TURBO_TEAM=${TURBO_TEAM}
 ENV TURBO_TOKEN=${TURBO_TOKEN}
