--- a/configurations/prisma/turbo.json
+++ b/configurations/prisma/turbo.json
@@ -10,7 +10,7 @@
         "dist/**",
         "prisma/schema-rs.prisma",
         "src/zod/**",
-        "./../../node_modules/.pnpm/*/node_modules/@prisma/client"
+        "./../../node_modules/.pnpm/*/node_modules/@prisma/client/**"
       ]
     },
     "dev": {
