--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.22.11",
+    "@lightdotso/auth": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
     "@prisma/client": "^5.2.0",
     "@trpc-limiter/core": "^0.0.8",
     "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
@@ -28,6 +31,7 @@
     "@upstash/redis": "^1.22.0",
     "inngest": "^2.6.0",
     "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "prisma": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,9 +42,7 @@
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
-    "@lightdotso/prisma": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
-    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.2.0",
     "@types/node": "^20.5.6",
