--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -75,7 +75,7 @@ COPY turbo.json turbo.json
 
 FROM dev as builder
 
-RUN pnpm turbo run build --filter @lightdotso/api --include-dependencies --no-deps
+RUN pnpm turbo run build --filter @lightdotso/api
 
 # Runner Stage
 FROM base AS production
