--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,6 +14,9 @@
   "author": "Light, Inc.",
   "sideEffects": false,
   "main": "index.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "@lightdotso/prisma": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
