--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,8 +25,8 @@
     "@lightdotso/trpc": "workspace:*",
     "@prisma/client": "^5.2.0",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "inngest": "^2.6.0",
