--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -55,10 +55,10 @@
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
