--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -19,10 +19,10 @@
     "@lightdotso/prisma": "workspace:*",
     "@prisma/client": "^5.2.0",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "next": "^13.4.13",
