--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -30,18 +30,6 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
           allowed-conclusions: success,skipped,cancelled
-  fly-deploy-api:
-    runs-on: ubuntu-latest
-    timeout-minutes: 30
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-      - name: Fly Install
-        uses: superfly/flyctl-actions/setup-flyctl@master
-      - name: Fly Deploy
-        run: flyctl deploy --config apps/api/fly.toml --dockerfile apps/api/Dockerfile --build-arg INNGEST_EVENT_KEY=${{ secrets.INNGEST_EVENT_KEY }} --build-arg TURBO_TEAM=${{ secrets.TURBO_TEAM }} --build-arg TURBO_TOKEN=${{ secrets.TURBO_TOKEN }} --remote-only
-        env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-bundler:
     runs-on: ubuntu-latest
     needs:
@@ -272,7 +260,6 @@ jobs:
     if: always()
     needs:
       - fly-wait-docker
-      - fly-deploy-api
       - fly-deploy-bundler
       - fly-deploy-bundler-sepolia
       - fly-deploy-consumer
@@ -294,5 +281,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-api,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-optimism,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-optimism,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
