--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -14,6 +14,9 @@
   "author": "Light, Inc.",
   "sideEffects": false,
   "main": "./index.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "@lightdotso/auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
@@ -29,6 +32,7 @@
     "next-auth": "^4.23.1",
     "openapi-types": "^12.1.3",
     "prisma": "^5.2.0",
+    "pusher-http-edge": "^0.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.13.1",
