--- a/packages/trpc/turbo.json
+++ b/packages/trpc/turbo.json
@@ -7,6 +7,7 @@
       "env": [
         "PORT",
         "NEXTAUTH_URL",
+        "NEXT_PUBLIC_VERCEL_ENV",
         "NEXT_PUBLIC_VERCEL_URL",
         "NEXT_PUBLIC_VERCEL_GIT_REPO_SLUG",
         "NODE_ENV",
