feat: ini api docker (#452)
* feat: ini api docker

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* perf: ini next env

* chore: update

* perf: ini doppler token

* chore: update

* chore: update

* perf: upgrade ncu

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: ini entrypoint

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* perf: ini file env

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* fix: build

* chore: update

* chore: update

* chore: update api trpc

* chore: update

--- a/configurations/prisma/turbo.json
+++ b/configurations/prisma/turbo.json
@@ -9,7 +9,8 @@
       "outputs": [
         "dist/**",
         "prisma/schema-rs.prisma",
-        "./../../node_modules/.pnpm/*/node_modules/@prisma/client"
+        "src/zod/**",
+        "../../node_modules/.pnpm/@prisma+client*/node_modules/.prisma/client/**"
       ]
     },
     "dev": {
