--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,42 +15,44 @@
   "scripts": {
     "build": "next build || true",
     "dev": "next dev",
-    "postinstall": "pnpm --filter @lightdotso/prisma build",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@babel/core": "^7.22.10",
-    "@prisma/client": "^5.1.1",
+    "@babel/core": "^7.22.11",
+    "@lightdotso/auth": "workspace:*",
+    "@lightdotso/prisma": "workspace:*",
+    "@lightdotso/trpc": "workspace:*",
+    "@prisma/client": "^5.2.0",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
-    "inngest": "^2.4.1",
+    "inngest": "^2.6.0",
     "next": "^13.4.13",
-    "prisma": "^5.1.1",
+    "next-auth": "^4.23.1",
+    "prisma": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.13.1",
-    "swagger-ui-react": "^5.3.1",
+    "swagger-ui-react": "^5.4.2",
     "trpc-openapi": "^1.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@lightdotso/eslint-config": "workspace:*",
-    "@lightdotso/prisma": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
-    "@lightdotso/trpc": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.4.10",
-    "@types/react": "^18.2.20",
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.2.0",
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/swagger-ui-react": "^4.18.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "publishConfig": {
     "access": "public"
