--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -21,7 +21,7 @@
     "diff": "shadcn-ui diff"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.2.0",
+    "@hookform/resolvers": "^3.3.0",
     "@lightdotso/styles": "workspace:*",
     "@lightdotso/trpc": "workspace:*",
     "@lightdotso/utils": "workspace:*",
@@ -51,14 +51,14 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
-    "@storybook/addon-styling": "^1.3.6",
+    "@storybook/addon-styling": "^1.3.7",
     "@tanstack/react-query": "^5.0.0-beta.9",
     "@tanstack/react-query-devtools": "^5.0.0-beta.9",
     "@tanstack/react-query-next-experimental": "^5.0.0-beta.9",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -67,7 +67,7 @@
     "lucide-react": "^0.263.1",
     "next": "^13.4.13",
     "react": "^18.2.0",
-    "react-day-picker": "^8.8.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "superjson": "^1.13.1",
@@ -75,41 +75,41 @@
     "tailwindcss-animate": "^1.0.6",
     "vite": "^4.4.9",
     "wagmi": "^1.3.10",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.22.11",
     "@lightdotso/eslint-config": "workspace:*",
     "@lightdotso/tailwindcss": "workspace:*",
     "@lightdotso/tsconfig": "workspace:*",
-    "@storybook/addon-actions": "^7.2.3",
-    "@storybook/addon-backgrounds": "^7.2.3",
-    "@storybook/addon-docs": "^7.2.3",
-    "@storybook/addon-essentials": "^7.2.3",
-    "@storybook/addon-interactions": "^7.2.3",
-    "@storybook/addon-links": "^7.2.3",
-    "@storybook/addon-measure": "^7.2.3",
-    "@storybook/addon-outline": "^7.2.3",
+    "@storybook/addon-actions": "^7.3.2",
+    "@storybook/addon-backgrounds": "^7.3.2",
+    "@storybook/addon-docs": "^7.3.2",
+    "@storybook/addon-essentials": "^7.3.2",
+    "@storybook/addon-interactions": "^7.3.2",
+    "@storybook/addon-links": "^7.3.2",
+    "@storybook/addon-measure": "^7.3.2",
+    "@storybook/addon-outline": "^7.3.2",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^7.2.3",
-    "@storybook/channel-postmessage": "^7.2.3",
-    "@storybook/channel-websocket": "^7.2.3",
-    "@storybook/client-api": "^7.2.3",
-    "@storybook/nextjs": "^7.2.3",
-    "@storybook/preview-api": "7.2.3",
-    "@storybook/preview-web": "^7.2.3",
-    "@storybook/react": "^7.2.3",
-    "@storybook/react-vite": "^7.2.3",
+    "@storybook/addons": "^7.3.2",
+    "@storybook/channel-postmessage": "^7.3.2",
+    "@storybook/channel-websocket": "^7.3.2",
+    "@storybook/client-api": "^7.3.2",
+    "@storybook/nextjs": "^7.3.2",
+    "@storybook/preview-api": "7.3.2",
+    "@storybook/preview-web": "^7.3.2",
+    "@storybook/react": "^7.3.2",
+    "@storybook/react-vite": "^7.3.2",
     "@storybook/testing-library": "0.2.0",
-    "@types/node": "^20.4.10",
-    "@types/react": "^18.2.20",
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
     "shadcn-ui": "^0.3.0",
-    "storybook": "^7.2.3",
+    "storybook": "^7.3.2",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "unist-builder": "^4.0.0",
     "unist-util-visit": "^5.0.0",
     "vite": "^4.4.9"
