--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,17 +14,20 @@
   "author": "Light, Inc.",
   "sideEffects": false,
   "main": "index.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "@lightdotso/prisma": "workspace:*",
     "@next-auth/prisma-adapter": "0.4.4-canary.81",
     "next": "^13.4.13",
-    "next-auth": "^4.23.0",
+    "next-auth": "^4.23.1",
     "siwe": "^2.1.4"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.4.10",
-    "typescript": "^5.1.6"
+    "@types/node": "^20.5.6",
+    "typescript": "^5.2.2"
   },
   "publishConfig": {
     "access": "public"
