--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -14,32 +14,36 @@
   "author": "Light, Inc.",
   "sideEffects": false,
   "main": "./index.ts",
+  "scripts": {
+    "build": "tsc"
+  },
   "dependencies": {
     "@lightdotso/auth": "workspace:*",
     "@lightdotso/prisma": "workspace:*",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@trpc-limiter/core": "^0.0.8",
-    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
-    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-09-10-23-47.45",
+    "@trpc/client": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/next": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/react-query": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
+    "@trpc/server": "10.32.1-alpha-actions-2-2023-08-14-10-36-36.53+ccbe40fde",
     "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.22.0",
     "next": "^13.4.13",
-    "next-auth": "^4.23.0",
+    "next-auth": "^4.23.1",
     "openapi-types": "^12.1.3",
-    "prisma": "^5.1.1",
+    "prisma": "^5.2.0",
+    "pusher-http-edge": "^0.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.13.1",
-    "swagger-ui-react": "^5.3.1",
+    "swagger-ui-react": "^5.4.2",
     "trpc-openapi": "^1.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@lightdotso/tsconfig": "workspace:*",
-    "@types/node": "^20.4.10",
-    "typescript": "^5.1.6"
+    "@types/node": "^20.5.6",
+    "typescript": "^5.2.2"
   },
   "publishConfig": {
     "access": "public"
