--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,1 @@
-.autometrics
-.build
-.next
-.git
-.gradle
-.turbo
-broadcast
-build
-cache
-cache_hardhat
-coverage
-dist
-fastlane
-lib
-node_modules
-optimized-out
-out
-out-wagmi
-target
-typechain-types
-.env
+.gitignore
