--- a/fly/consumer/fly.toml
+++ b/fly/consumer/fly.toml
@@ -14,20 +14,17 @@ kill_timeout = "5s"
 [build]
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
+[deploy]
+  strategy = "bluegreen"
+
 [http_service]
-  internal_port = 3008
-  force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
-  [http_service.concurrency]
-    type = "requests"
-    hard_limit = 250
-    soft_limit = 200
 
 [checks]
   [checks.health]
-    port = 3008
+    port = 9091
     type = "http"
     interval = "15s"
     timeout = "10s"
@@ -36,5 +33,5 @@ kill_timeout = "5s"
     path = "/health"
 
 [metrics]
-  port = 3008
+  port = 9091
   path = "/metrics"
