--- a/fly/rpc/fly.toml
+++ b/fly/rpc/fly.toml
@@ -14,20 +14,17 @@ kill_timeout = "5s"
 [build]
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
+[deploy]
+  strategy = "bluegreen"
+
 [http_service]
-  internal_port = 3000
-  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 1
-  [http_service.concurrency]
-    type = "requests"
-    hard_limit = 250
-    soft_limit = 200
 
 [checks]
   [checks.health]
-    port = 3000
+    port = 9091
     type = "http"
     interval = "15s"
     timeout = "10s"
@@ -35,5 +32,6 @@ kill_timeout = "5s"
     method = "get"
     path = "/health"
 
-[deploy]
-  strategy = "bluegreen"
+[metrics]
+  port = 9091
+  path = "/metrics"
