--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -94,6 +94,8 @@ jobs:
       - name: Check Gas Snapshots
         run: |
           make contracts-snapshot-check
+        env:
+          FORGE_PROFILE: local
       - name: Run Coverage
         run: |
           forge coverage --report lcov
