--- a/foundry.toml
+++ b/foundry.toml
@@ -15,7 +15,6 @@
     "lib/v3-periphery",
   ]
   gas_reports = ["LightWallet", "LightWalletFactory"]
-  no_match_test = "testForkRun"
   optimizer = true
   optimizer_runs = 10_000
   solc = "0.8.18"
@@ -33,6 +32,7 @@
   test = 'contracts'
 
 [profile.local]
+  no_match_path = "contracts/test/fork"
 
 [profile.ci]
   fuzz = { runs = 5000 }
