--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -131,7 +131,7 @@ jobs:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
       - contracts-turbo
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 90
     env:
       FOUNDRY_PROFILE: smt
