--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -9,6 +9,8 @@ on:
       - labeled
   merge_group:
   workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
