--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -8,11 +8,15 @@ on:
     types:
       - labeled
   merge_group:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 env:
   FOUNDRY_PROFILE: ci
+  PROTECTED_RPC_URL: ${{ secrets.PROTECTED_RPC_URL }}
 jobs:
   contracts-turbo:
     runs-on: ubuntu-latest
@@ -67,42 +71,6 @@ jobs:
       - name: Contracts Lint
         run: |
           forge fmt --check
-  contracts-storage:
-    if: needs.contracts-turbo.outputs.trigger == 'true'
-    needs:
-      - contracts-turbo
-    runs-on: ubuntu-latest
-    timeout-minutes: 90
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-      - name: Install Deps
-        run: |
-          forge install
-      - name: Run Build
-        run: |
-          forge build
-      - name: Size Check
-        run: |
-          make contracts-size
-      - name: Storage Check
-        run: |
-          for ((i=1; i<=3; i++));
-            do make contracts-storage;
-          done
-      - name: Check Changes
-        run: |
-          git diff --quiet
-      - if: failure()
-        name: Show Storage Changes
-        run: |
-          git diff
   contracts-test:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -139,6 +107,99 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
           flags: contracts
+  contracts-fork:
+    if: needs.contracts-turbo.outputs.trigger == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        network:
+          - sepolia
+    timeout-minutes: 90
+    env:
+      FOUNDRY_PROFILE: fork
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Deps
+        run: |
+          forge install
+      - name: Run Fork
+        run: |
+          forge test
+        env:
+          NETWORK_NAME: ${{ matrix.network }}
+  contracts-smt:
+    if: needs.contracts-turbo.outputs.trigger == 'true'
+    needs:
+      - contracts-turbo
+    runs-on: macos-latest
+    timeout-minutes: 90
+    env:
+      FOUNDRY_PROFILE: smt
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Deps
+        run: |
+          forge install
+      - name: Contracts Smt
+        run: |
+          forge build > smt-checker-report.txt
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: smt-checker-report
+          path: smt-checker-report.txt
+  contracts-storage:
+    if: needs.contracts-turbo.outputs.trigger == 'true'
+    needs:
+      - contracts-turbo
+    runs-on: ubuntu-latest
+    timeout-minutes: 90
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Install Deps
+        run: |
+          forge install
+      - name: Run Build
+        run: |
+          forge build
+      - name: Size Check
+        run: |
+          make contracts-size
+      - name: Storage Check
+        run: |
+          for ((i=1; i<=3; i++));
+            do make contracts-storage;
+          done
+      - name: Check Changes
+        run: |
+          git diff --quiet
+      - if: failure()
+        name: Show Storage Changes
+        run: |
+          git diff
   contracts-noir:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -201,8 +262,10 @@ jobs:
     needs:
       - contracts-build
       - contracts-lint
-      - contracts-storage
       - contracts-test
+      - contracts-fork
+      - contracts-smt
+      - contracts-storage
       - contracts-noir
       - contracts-slither
     runs-on: ubuntu-latest
@@ -211,5 +274,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-noir,contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-test,contracts-fork,contracts-smt,contracts-storage,contracts-noir,contracts-slither
           jobs: ${{ toJSON(needs) }}
