--- a/fly/indexer/fly.toml
+++ b/fly/indexer/fly.toml
@@ -17,6 +17,17 @@ kill_timeout = "5s"
 [deploy]
   strategy = "canary"
 
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 1
+  [http_service.concurrency]
+    type = "requests"
+    hard_limit = 250
+    soft_limit = 200
+
 [checks]
   [checks.health]
     port = 9091
