perf: deploy chain ids

--- a/crates/axum/Cargo.toml
+++ b/crates/axum/Cargo.toml
@@ -16,6 +16,7 @@
   governor = "0.5.1"
   http = { workspace = true }
   hyper = { workspace = true }
+  lightdotso-indexer = { workspace = true }
   lightdotso-redis = { workspace = true }
   lightdotso-tracing = { workspace = true }
   serde = { workspace = true, features = ["derive"] }
